--- a/less_4/task_3/style.css
+++ b/less_4/task_3/style.css
@@ -2,7 +2,7 @@ body{
     padding: 20px;
 }
 .userdata{
-    border: 2px solid #ccc;
+    background-color: #cccccc;
     padding: 20px;
     width: 500px;
 }
